--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
         padding: 0;
         margin: 0;
     }
+    #backgrou{
+        width: 100vh;
+        height: 100vw;
+    }
     /* body{
         font-family: Arial, Helvetica, sans-serif; } */
     .conainer-change-color{
